4. Use dialog for virtual library selection.
5. Remove small icon-only grid option, and default to always set.
6. Remove play/add/etc menu from search result headers.
7. Change now-playing expand/collapse icons.
8. If sufficient space, place now-plying collapse button bottom left in
   desktop layout. If insufficient space, add to cover overlay.

6.1.8
-----
1. Add icons to global search entries.
2. When showing 'N Items' in subtitle, adjust for number of headers.
3. Fix sorting of scrollable list items in 'Interface' settings dialog.
4. Fix colours in logging view.

6.1.7
-----
1. Fix dialog list sizing on iOS.
2. Fix home button in iframe dialogs.
3. Fix 'Show when wide enough' string.
4. Show home button in certain dialogs, if requested by caller, regardless of
   setting.
5. If a SlimBrowse header has no actions then ignore clicks.
6. Ignore swipes when non-pinned queue is shown.
7. Fix various actions (such as scrolling) when non-pinned queue shown over
   now-playing.
8. Show 'More' on far left for SlimBrowse headers with an action.

6.1.6
-----
1. Fix tiny sub-text in expanded now-playing at certain sizes.
2. Check if can use 'query_param' in Perl code.
3. When virtual keyboard is show, check if item is in list for mobile as well
   as desktop view.

6.1.5
-----
1. When requesting 'Random albums/releases' for scrolled lists obtain complete
   list, but initially only show N items - use stored list for 'More'.
2. Fix invoking 'Download' from scrolled list.
3. Add note about popups to download confirmation dialog.
4. Disable downloads on iOS once more.
5. Fix scrolled list order being reset.
6. Fix scrolled list selection dialog when items have multi-line sub-text.
7. Add Swedish translation - thanks to Johan Saaw.

6.1.4
-----
1. Don't show group player's in sync dialog, instead allow showing sync dialog
   from group player (but only if group is playing).
2. Fix reading 'Show ratings' from default settings.