@@ -10,6 +10,7 @@
 7. Change now-playing expand/collapse icons.
 8. If sufficient space, place now-plying collapse button bottom left in
    desktop layout. If insufficient space, add to cover overlay.
+9. Show classical work reviews in MAI and browse.
 
 6.1.8
 -----
